# Spine_Sim_V3

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
archive/: README.md
archive/web_pro_derivation_2026-07-17/: README.md
derivation/contracts/: B_TO_C_CONTRACT.md
docs/: PROJECT_INSTRUCTION_MIGRATION_2026-07-18.md
docs/derivation_workflow/: DERIVATION_WORKFLOW.md
docs/extract/: LITERATURE_MODULE_ROUTING.md  工程设计讨论_29篇文献速查.md  网页端Pro分阶段上传规划.md
docs/simulator_development/: README.md  REQUIREMENTS_DISCUSSION_WORKFLOW.md  SIMULATOR_MODULE_PLAN.md
engineering_fixed_context/internal/: manifest.yaml
reports/m00/: M00_ACCEPTANCE_REPORT.md  M00_PERFORMANCE_REPORT.json
reports/m01/: M01_ACCEPTANCE_REPORT.md  M01_PERFORMANCE_REPORT.json  M01_VALIDATION_REPORT.md
reports/m02/: M02_ACCEPTANCE_REPORT.md  M02_PERFORMANCE_REPORT.json  M02_PERFORMANCE_REPORT.md  M02_VALIDATION_REPORT.md  M02_VALIDATION_SUMMARY.json
reports/m03/: M03_ACCEPTANCE_REPORT.md  M03_PERFORMANCE_REPORT.json  M03_PERFORMANCE_REPORT.md  M03_VALIDATION_REPORT.md  M03_VALIDATION_SUMMARY.json
scripts/: __init__.py  run_m00_performance.py  run_m01_performance.py  run_m02_m01_compatibility.py  run_m02_replay_validation.py  run_m02_streaming_validation.py  run_m03_analytic_suite.py  run_m03_campaign.py  run_m03_validation.py
src/spine_sim/: __init__.py
tests/: __init__.py  conftest.py
tests/fixtures/: M00_LEGACY_BUNDLE_1_0_0.json
tests/foundation/: test_config.py  test_docs_architecture.py  test_evolution_replay.py  test_extension_transaction_diagnostics.py  test_parallel_invariance.py  test_performance.py  test_reader_bundle.py  test_registry.py  test_transaction_faults.py  test_units_identity_models.py
tests/numerics/: __init__.py  test_continuation.py  test_contracts.py  test_demo_validation_only.py  test_events.py  test_failures.py  test_import_boundaries.py  test_m01_compatibility.py  test_plot_recipes.py  test_quality_nonlinear.py  test_refinement.py  test_replay.py  test_result_extension.py  test_service.py  test_streaming.py  test_transaction.py
tests/single_spine/: __init__.py  test_analytic_suite.py  test_campaign_runner.py  test_campaigns.py  test_demo_validation_only.py  test_events.py  test_geometry_cache.py  test_geometry_surface.py  test_kernel.py  test_mechanics.py  test_result_extension.py  test_standalone.py  test_standalone_persistence.py  test_summaries_recipes.py  test_validation_figures.py
tests/surface/: test_analytic.py  test_contracts_provider.py  test_demo_preview.py  test_import_boundaries.py  test_materialization.py  test_mesh_regression.py  test_query_geometry.py  test_query_newton_batch.py  test_result_extension.py  test_rng_replay.py  test_sphere_geometry.py  test_surface_performance.py  test_synthetic.py  test_synthetic_query.py
theory/: README.md
theory/evidence_reassessment/: README.md
theory/implementation/: DEV_BOOTSTRAP_PROFILE.yaml  (+1 more)
(+367 files in other folders)
