[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "spine-sim"
version = "0.1.0"
description = "Typed foundation and canonical result contracts for Spine Sim V3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.0",
  "packaging>=24.1",
  "pyarrow>=17.0",
  "PyYAML>=6.0.2",
  "zarr>=3.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "psutil>=6.0",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.scripts]
spine-sim-m00-validation-demo = "spine_sim.foundation.demo_validation_only:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spine_sim"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "performance: M00 performance and bounded-memory acceptance checks",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
packages = ["spine_sim.foundation"]

[[tool.mypy.overrides]]
module = ["pyarrow.*", "yaml.*", "zarr.*"]
ignore_missing_imports = true
