[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "spine-sim"
version = "0.3.0"
description = "Typed foundation, deterministic surface geometry, numerical orchestration, and canonical results for Spine Sim V3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.0",
  "packaging>=24.1",
  "pyarrow>=17.0",
  "PyYAML>=6.0.2",
  "zarr>=3.1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.11",
  "psutil>=6.0",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]
preview = [
  "matplotlib>=3.9",
]

[project.scripts]
spine-sim-m00-validation-demo = "spine_sim.foundation.demo_validation_only:main"
spine-sim-m01-validation-demo = "spine_sim.surface.demo_validation_only:main"
spine-sim-m01-preview = "spine_sim.surface.preview.cli:main"
spine-sim-m02-validation-demo = "spine_sim.numerics.demo_validation_only:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spine_sim"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "performance: bounded-memory performance acceptance checks",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
packages = ["spine_sim"]

[[tool.mypy.overrides]]
module = ["matplotlib.*", "pyarrow.*", "yaml.*", "zarr.*"]
ignore_missing_imports = true
